--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ SET(BUILD_GMOCK ON CACHE INTERNAL "")
 SET(BUILD_GTEST ON CACHE INTERNAL "")
 SET(INSTALL_GMOCK OFF CACHE INTERNAL "")
 SET(INSTALL_GTEST OFF CACHE INTERNAL "")
-SET(G3_SHARED_LIB OFF CACHE INTERNAL "")
 SET(CHANGE_G3LOG_DEBUG_TO_DBUG OFF CACHE INTERNAL "")
 SET(ENABLE_FATAL_SIGNALHANDLING ON CACHE INTERNAL "")
 SET(G3_IOS_LIB OFF CACHE INTERNAL "")
@@ -21,6 +20,17 @@ SET(gtest_disable_pthreads OFF CACHE INTERNAL "")
 SET(gtest_hide_internal_symbols OFF CACHE INTERNAL "")
 SET(gtest_force_shared_crt OFF CACHE INTERNAL "")
 
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+	SET(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
+	SET(G3_SHARED_LIB OFF CACHE INTERNAL "")
+	message("Building static libs")
+else()
+	SET(BUILD_SHARED_LIBS ON CACHE INTERNAL "")
+	SET(G3_SHARED_LIB ON CACHE INTERNAL "")
+	message("Building shared libs")
+endif()
+
+
 include(compile_options.cmake)
 
 project(example)
@@ -33,7 +43,7 @@ add_subdirectory(test)
 message("COMPILING MAIN")
 ADD_EXECUTABLE(main main.cpp)
 TARGET_LINK_LIBRARIES(main PRIVATE g3logger utils pthread) 
-TARGET_COMPILE_FEATURES(main PUBLIC cxx_std_14)
+TARGET_COMPILE_FEATURES(main PUBLIC cxx_std_17)
 
 compile_options(main)
 
