--- a/core/utils/CMakeLists.txt
+++ b/core/utils/CMakeLists.txt
@@ -1,6 +1,5 @@
 message("COMPILING UTILS")
-ADD_LIBRARY(utils src/SoutSink.cpp)
-TARGET_LINK_LIBRARIES(utils PRIVATE g3logger)
+ADD_LIBRARY(utils)
 TARGET_INCLUDE_DIRECTORIES(utils PRIVATE src PUBLIC include)
 TARGET_COMPILE_FEATURES(utils PUBLIC cxx_std_17)
 TARGET_SOURCES(utils PRIVATE src/ConsumerThread.cpp)
